# pyInkDisplay

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  pyAlarm.py  pyInkDisplay.py  pyInkPictureFrame.py  pySugarAlarm.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements.in  showHomeAssistant.py  utils.py  waveshare_epd.epd7in3f.ini
.github/workflows/: ci.yml  release.yml  tests.yml
config/: config.yaml  pyInkDisplay.service  pyInkPictureFrame.service
docs/: README.md
docs/superpowers/plans/: 2026-04-03-plan-1-power-aware-runtime.md  2026-04-03-plan-2-deployment-self-update.md  2026-04-03-plan-3-observability.md  2026-04-03-plan-4-image-fallback.md
docs/superpowers/specs/: 2026-04-03-prd-design.md
pyinkdisplay/: __init__.py  __main__.py  logging_config.py  mqttDiscovery.py  notifications.py  pyImageOfTheDay.py  pyInkDisplay.py  pyInkPictureFrame.py  pyLoggingConfig.py  pyMqttDiscovery.py  pyNotifications.py  pySugarAlarm.py  pyUpdater.py  pyUtils.py  updater.py  utils.py
scripts/: deploy.sh  mqttTest.py  pyinkdisplay  revert.sh
tests/: __init__.py  testPyInkDisplay.py  testPyInkPictureFrame.py  testPySugarAlarm.py  testUtils.py  test_logging_config.py  test_mqtt_discovery.py  test_notifications.py  test_py_image_of_the_day.py  test_py_ink_display.py  test_py_ink_picture_frame.py  test_py_logging_config.py  test_py_mqtt_discovery.py  test_py_notifications.py  test_py_sugar_alarm.py  test_py_updater.py  test_py_utils.py  test_quiet_hours.py  test_updater.py  test_utils.py
tests/stubs/omni_epd/: __init__.py  displayfactory.py
