[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyinkdisplay"
version = "1.0.0"
description = "Display a picture on an e-ink display"
authors = [{name = "Velotales", email = "velotales@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
pyinkdisplay = "pyinkdisplay.pyInkPictureFrame:pyInkPictureFrame"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyinkdisplay*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests/stubs"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
